objects/CCPA_Action_Staging__c.object
<CustomObject>
    <fields>
        <fullName>Key_Name__c</fullName>
        <label>Key Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Value_2__c</fullName>
        <label>Key Value 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Value__c</fullName>
        <label>Key Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_ID__c</fullName>
        <label>Request ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CCPA Action Staging</label>
    <nameField>
        <label>CCPA Action Staging Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCPA Action Staging</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>